# decon-recon

./: .gitignore  README.md
data/campaign/town-hall-murder/: campaign.toml  characters.toml  modalities.toml  substants.toml  utterances.toml
decon-recon/: GAME_DESIGN.md  Game.tscn  icon.svg.import  play_button_style_box.tres  play_button_style_box_hover.tres  play_button_style_box_pressed.tres  project.godot
decon-recon/addons/diff-patch-match/: diff_utility.gd.uid
decon-recon/campaigns/: town_hall_murder.json
decon-recon/fonts/: OpenMoji-black-glyf.ttf.import  OpenMoji-black-glyf.woff2.import
decon-recon/scenes/card_decon/: aspect_card.gd  aspect_card.tscn  card_decon.gd  card_decon.tscn
decon-recon/scenes/cards/: aspect_card.gd.uid  aspect_card.tscn
decon-recon/scenes/game_modes/card_decon/: card_decon.gd  card_decon.gd.uid  card_decon.tscn
decon-recon/scenes/game_modes/modality_con/: aspect_description_button.gd  aspect_description_button.gd.uid  aspect_description_button.tscn  modality_con.gd  modality_con.gd.uid  modality_con.tscn
decon-recon/scenes/hub/: hub.tscn  hub_counter.gd  hub_counter.gd.uid  hub_counter.tscn  hub_interface.tscn
decon-recon/scenes/overviews/: aspects_overview.tscn
decon-recon/utils/: campaign_data.gd  campaign_data.gd.uid  example_usage.gd  example_usage.gd.uid  game_parameters.gd  game_parameters.gd.uid  global_game_state.gd  global_game_state.gd.uid  global_signals.gd  global_signals.gd.uid
server/: Cargo.toml  README.md
server/src/: campaign.rs  error.rs  generator.rs  llm.rs  main.rs  models.rs  prompts.rs
(+1 files in other folders)
