[package]
name = "decon-recon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
dotenv = "0.15"
uuid = { version = "1.8", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
